--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "knex": "^3.1.0",
+    "pg": "^8.11.3",
     "postgres": "^3.4.3"
   },
   "name": "backend",
