--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "knex": "^3.1.0",
+    "nodemon": "^3.0.3",
     "pg": "^8.11.3",
     "postgres": "^3.4.3"
   },
@@ -11,13 +12,21 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/server.js",
+    "test": "npx cross-env LOG_LEVEL=warn NODE_ENV=qa jest --runInBand --detectOpenHandles --forceExit",
+    "test:1": "npm run test -- er-00",
+    "test:start": "npx cross-env LOG_LEVEL=warn NODE_ENV=qa npm run test:start:run",
+    "test:start:run": "run-s test:drop-database start "
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/node": "^20.11.19"
+    "@types/node": "^20.11.19",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "regenerator-runtime": "^0.14.1",
+    "supertest": "^6.3.4"
   }
 }
