--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,14 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "connect-session-knex": "^4.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "knex": "^3.1.0",
     "nodemon": "^3.0.3",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.11.3",
     "postgres": "^3.4.3"
   },
