--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-big-calendar": "^1.10.2",
+    "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
@@ -24,6 +25,7 @@
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.55",
     "@types/react-big-calendar": "^1.8.8",
+    "@types/react-datepicker": "^6.0.1",
     "@types/react-dom": "^18.2.19",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
