--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.22.2",
+    "@tanstack/react-query-devtools": "^5.24.0",
+    "axios": "^1.6.7",
     "moment": "^2.30.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
