--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query-devtools": "^5.24.0",
     "axios": "^1.6.7",
     "moment": "^2.30.1",
+    "notistack": "^3.0.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-big-calendar": "^1.10.2",
