--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "knex": "^3.1.0",
+    "moment": "^2.30.1",
     "nodemon": "^3.0.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
