--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "express-session": "^1.18.0",
     "knex": "^3.1.0",
     "moment": "^2.30.1",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.0.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
