--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,10 +2,11 @@
   "version": 2,
   "builds": [
     {
-      "src": "./index.js",
+      "src": "./api/index.js",
       "use": "@vercel/node"
     }
   ],
+  "rewrites": [{ "source": "/(.*)", "destination": "/api" }],
   "routes": [
     {
       "src": "/(.*)",
