--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "connect-session-knex": "^4.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
@@ -19,7 +20,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/api/index.js",
+    "dev": "nodemon src/server.js",
     "test": "npx cross-env LOG_LEVEL=warn NODE_ENV=qa jest --runInBand --detectOpenHandles --forceExit",
     "test:1": "npm run test -- er-00",
     "test:start": "npx cross-env LOG_LEVEL=warn NODE_ENV=qa npm run test:start:run",
