--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
+    "react-player": "^2.15.1",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.22.1",
     "uuid": "^9.0.1"
   },
