--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -27,6 +27,7 @@
       "assets/*": ["src/assets/*"],
       "constants/*": ["src/constants/*"],
       "context/*": ["src/context/*"],
+      "hooks/*": ["src/hooks/*"],
       "utils/*": ["src/utils/*"]
     }
   },
